// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/LONG.proto";
import "./EncodingAction.proto";
import "./EncodedType.proto";
import "./InputType.proto";

package encode.protobuf;

message EncodeInvocation {
extensions 5 to 105;

  optional ccsds_mal.protobuf.LONG definitionId = 1;
  optional encode.protobuf.InputType inputType = 2;
  optional encode.protobuf.EncodingAction encodingAction = 3;
  optional encode.protobuf.EncodedType encodedType = 4;
}
