// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/LONG.proto";


package encode.protobuf;

message EncodeLargeTCInvocation {
extensions 3 to 103;

  optional ccsds_mal.protobuf.LONG definitionId = 1;
  optional ccsds_mal.protobuf.BLOB rawValue = 2;
}
